--- a/Task1/list.html
+++ b/Task1/list.html
@@ -1,28 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>List</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <style>
-        a{
+        a {
             text-decoration: none;
             color: black;
         }
+
+        .item {
+            float: left;
+            margin-left: 1.6%;
+            margin-bottom: 2%;
+            width: 23%;
+            background-color: whitesmoke"
+        }
+
+        .list {
+            margin-left: 5%;
+            width: 90%;
+        }
     </style>
 </head>
+
 <body>
-<div class="card" style="width: 18rem;background-color: whitesmoke">
-    <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px" style="border-radius: 5px">
-    <div class="card-body">
-        <h5 class="card-title"> Ocean suite</h5>
-        <p class="card-text">Room size: 400m<sup>2</sup></p>
-        <a style="float: right" href="#"> <img src="https://img.icons8.com/material-outlined/20/null/info--v1.png"/>Know more</a>
+    <div class="list">
+        <div class="card item">
+            <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
+                style="border-radius: 5px">
+            <div class="card-body">
+                <h5 class="card-title"> Ocean suite</h5>
+                <p class="card-text">Room size: 400m<sup>2</sup></p>
+                <a style="float: right" href="#"> <img
+                        src="https://img.icons8.com/material-outlined/20/null/info--v1.png" />Know more</a>
+            </div>
+        </div>
+        <div class="card item" >
+            <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
+                style="border-radius: 5px">
+            <div class="card-body">
+                <h5 class="card-title"> Ocean suite</h5>
+                <p class="card-text">Room size: 400m<sup>2</sup></p>
+                <a style="float: right" href="#"> <img
+                        src="https://img.icons8.com/material-outlined/20/null/info--v1.png" />Know more</a>
+            </div>
+        </div>
+        <div class="card item" >
+            <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
+                style="border-radius: 5px">
+            <div class="card-body">
+                <h5 class="card-title"> Ocean suite</h5>
+                <p class="card-text">Room size: 400m<sup>2</sup></p>
+                <a style="float: right" href="#"> <img
+                        src="https://img.icons8.com/material-outlined/20/null/info--v1.png" />Know more</a>
+            </div>
+        </div>
+        <div class="card item" >
+            <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
+                style="border-radius: 5px">
+            <div class="card-body">
+                <h5 class="card-title"> Ocean suite</h5>
+                <p class="card-text">Room size: 400m<sup>2</sup></p>
+                <a style="float: right" href="#"> <img
+                        src="https://img.icons8.com/material-outlined/20/null/info--v1.png" />Know more</a>
+            </div>
+        </div>
+        <div class="card item" >
+            <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
+                style="border-radius: 5px">
+            <div class="card-body">
+                <h5 class="card-title"> Ocean suite</h5>
+                <p class="card-text">Room size: 400m<sup>2</sup></p>
+                <a style="float: right" href="#"> <img
+                        src="https://img.icons8.com/material-outlined/20/null/info--v1.png" />Know more</a>
+            </div>
+        </div>
     </div>
-</div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+
 </html>
