--- a/Task1/listFacilities.html
+++ b/Task1/listFacilities.html
@@ -19,68 +19,110 @@
             margin-bottom: 2%;
             width: 23%;
             background-color: whitesmoke"
+
         }
 
         .list {
             margin-left: 5%;
             width: 90%;
         }
+
+        .home {
+            width: 100%;
+            height: 200px;
+            background-image: url('M-resort-phu-quoc-19.jpg');
+            background-size: width height 100%;
+            margin-bottom: 50px;
+            text-align: center;
+        }
+
+        .cont {
+            color: aliceblue;
+            font-size: 40px;
+            margin-top: 100px;
+        }
+
     </style>
 </head>
 
 <body>
-    <div class="list">
-        <div class="card item">
-            <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
-                style="border-radius: 5px">
-            <div class="card-body">
-                <h5 class="card-title"> Ocean suite</h5>
-                <p class="card-text">Room size: 400m<sup>2</sup></p>
-                <a style="float: right" href="#"> <img
-                        src="https://img.icons8.com/material-outlined/20/null/info--v1.png" />Know more</a>
-            </div>
-        </div>
-        <div class="card item" >
-            <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
-                style="border-radius: 5px">
-            <div class="card-body">
-                <h5 class="card-title"> Ocean suite</h5>
-                <p class="card-text">Room size: 400m<sup>2</sup></p>
-                <a style="float: right" href="#"> <img
-                        src="https://img.icons8.com/material-outlined/20/null/info--v1.png" />Know more</a>
-            </div>
-        </div>
-        <div class="card item" >
-            <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
-                style="border-radius: 5px">
-            <div class="card-body">
-                <h5 class="card-title"> Ocean suite</h5>
-                <p class="card-text">Room size: 400m<sup>2</sup></p>
-                <a style="float: right" href="#"> <img
-                        src="https://img.icons8.com/material-outlined/20/null/info--v1.png" />Know more</a>
-            </div>
-        </div>
-        <div class="card item" >
-            <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
-                style="border-radius: 5px">
-            <div class="card-body">
-                <h5 class="card-title"> Ocean suite</h5>
-                <p class="card-text">Room size: 400m<sup>2</sup></p>
-                <a style="float: right" href="#"> <img
-                        src="https://img.icons8.com/material-outlined/20/null/info--v1.png" />Know more</a>
-            </div>
-        </div>
-        <div class="card item" >
-            <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
-                style="border-radius: 5px">
-            <div class="card-body">
-                <h5 class="card-title"> Ocean suite</h5>
-                <p class="card-text">Room size: 400m<sup>2</sup></p>
-                <a style="float: right" href="#"> <img
-                        src="https://img.icons8.com/material-outlined/20/null/info--v1.png" />Know more</a>
-            </div>
-        </div>
+    <div class="home position-sticky">
+        <b class="cont">Facilities</b>
     </div>
+    <div class="list">
+        <div class=" card item">
+            <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
+                style="border-radius: 5px">
+            <div class="card-body">
+                <h5 class="card-title "> Ocean suite</h5>
+                <p class="card-text ">Room size: 400m<sup>2</sup></p>
+                <a style="float: right" href="#"> <img
+                        src="https://img.icons8.com/material-outlined/20/null/info--v1.png" />Know more</a>
+            </div>
+        </div>
+        <div class=" card item">
+            <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
+                style="border-radius: 5px">
+            <div class="card-body">
+                <h5 class="card-title "> Ocean suite</h5>
+                <p class="card-text ">Room size: 400m<sup>2</sup></p>
+                <a style="float: right" href="#"> <img
+                        src="https://img.icons8.com/material-outlined/20/null/info--v1.png" />Know more</a>
+            </div>
+        </div>
+        <div class=" card item">
+            <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
+                style="border-radius: 5px">
+            <div class="card-body">
+                <h5 class="card-title "> Ocean suite</h5>
+                <p class="card-text ">Room size: 400m<sup>2</sup></p>
+                <a style="float: right" href="#"> <img
+                        src="https://img.icons8.com/material-outlined/20/null/info--v1.png" />Know more</a>
+            </div>
+        </div>
+        <div class=" card item">
+            <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
+                style="border-radius: 5px">
+            <div class="card-body">
+                <h5 class="card-title "> Ocean suite</h5>
+                <p class="card-text ">Room size: 400m<sup>2</sup></p>
+                <a style="float: right" href="#"> <img
+                        src="https://img.icons8.com/material-outlined/20/null/info--v1.png" />Know more</a>
+            </div>
+        </div>
+        <div class=" card item">
+            <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
+                style="border-radius: 5px">
+            <div class="card-body">
+                <h5 class="card-title "> Ocean suite</h5>
+                <p class="card-text ">Room size: 400m<sup>2</sup></p>
+                <a style="float: right" href="#"> <img
+                        src="https://img.icons8.com/material-outlined/20/null/info--v1.png" />Know more</a>
+            </div>
+        </div>
+        <div class=" card item">
+            <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
+                style="border-radius: 5px">
+            <div class="card-body">
+                <h5 class="card-title "> Ocean suite</h5>
+                <p class="card-text ">Room size: 400m<sup>2</sup></p>
+                <a style="float: right" href="#"> <img
+                        src="https://img.icons8.com/material-outlined/20/null/info--v1.png" />Know more</a>
+            </div>
+        </div>
+        <div class=" card item">
+            <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
+                style="border-radius: 5px">
+            <div class="card-body">
+                <h5 class="card-title "> Ocean suite</h5>
+                <p class="card-text ">Room size: 400m<sup>2</sup></p>
+                <a style="float: right" href="#"> <img
+                        src="https://img.icons8.com/material-outlined/20/null/info--v1.png" />Know more</a>
+            </div>
+        </div>
+
+    </div>
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
