--- a/Task1/listFacilities.html
+++ b/Task1/listFacilities.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
+
     <style>
         a {
             text-decoration: none;
@@ -18,20 +20,21 @@
             margin-left: 1.6%;
             margin-bottom: 2%;
             width: 23%;
-            background-color: whitesmoke"
-
+            background-color: whitesmoke;
+            position: relative;
         }
 
         .list {
             margin-left: 5%;
             width: 90%;
+
         }
 
         .home {
             width: 100%;
             height: 200px;
             background-image: url('M-resort-phu-quoc-19.jpg');
-            background-size: width height 100%;
+            background-size: width height 100% ;
             margin-bottom: 50px;
             text-align: center;
         }
@@ -42,15 +45,43 @@
             margin-top: 100px;
         }
 
+        .item:hover .btn-hi {
+            display: block;
+        }
+
+
+        .btn-hi {
+            display: none;
+            position: absolute;
+            top: 50%;
+            left: 30%;
+            width: 100%;
+
+        }
+
+        .btn-ho {
+            border-radius: 50%;
+            position: fixed;
+            right: 20px;
+            bottom: 20px;
+        }
+
     </style>
 </head>
 
 <body>
-    <div class="home position-sticky">
+    <a href="#home"><button type="button" class="btn btn-outline-primary btn-ho"><i
+                class="fa-solid fa-arrow-up"></i></button></a>
+    <div id="home" class="home">
         <b class="cont">Facilities</b>
     </div>
     <div class="list">
         <div class=" card item">
+            <div class="btn-hi">
+                <a href="addAndUpFacilities.html"><button type="button" class="btn btn-success">Edit</button></a>
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">Delete</button>
+            </div>
             <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
                 style="border-radius: 5px">
             <div class="card-body">
@@ -61,6 +92,11 @@
             </div>
         </div>
         <div class=" card item">
+            <div class="btn-hi">
+                <a href="addAndUpFacilities.html"><button type="button" class="btn btn-success">Edit</button></a>
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">Delete</button>
+            </div>
             <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
                 style="border-radius: 5px">
             <div class="card-body">
@@ -71,6 +107,11 @@
             </div>
         </div>
         <div class=" card item">
+            <div class="btn-hi">
+                <a href="addAndUpFacilities.html"><button type="button" class="btn btn-success">Edit</button></a>
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">Delete</button>
+            </div>
             <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
                 style="border-radius: 5px">
             <div class="card-body">
@@ -81,6 +122,11 @@
             </div>
         </div>
         <div class=" card item">
+            <div class="btn-hi">
+                <a href="addAndUpFacilities.html"><button type="button" class="btn btn-success">Edit</button></a>
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">Delete</button>
+            </div>
             <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
                 style="border-radius: 5px">
             <div class="card-body">
@@ -91,6 +137,11 @@
             </div>
         </div>
         <div class=" card item">
+            <div class="btn-hi">
+                <a href="addAndUpFacilities.html"><button type="button" class="btn btn-success">Edit</button></a>
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">Delete</button>
+            </div>
             <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
                 style="border-radius: 5px">
             <div class="card-body">
@@ -101,6 +152,11 @@
             </div>
         </div>
         <div class=" card item">
+            <div class="btn-hi">
+                <a href="addAndUpFacilities.html"><button type="button" class="btn btn-success">Edit</button></a>
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">Delete</button>
+            </div>
             <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
                 style="border-radius: 5px">
             <div class="card-body">
@@ -111,6 +167,11 @@
             </div>
         </div>
         <div class=" card item">
+            <div class="btn-hi">
+                <a href="addAndUpFacilities.html"><button type="button" class="btn btn-success">Edit</button></a>
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">Delete</button>
+            </div>
             <img src="M-resort-phu-quoc-19.jpg" class="card-img-top" alt="..." width="288px" height="200px"
                 style="border-radius: 5px">
             <div class="card-body">
@@ -120,9 +181,27 @@
                         src="https://img.icons8.com/material-outlined/20/null/info--v1.png" />Know more</a>
             </div>
         </div>
+
 
     </div>
-
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Facilities</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <b id="result"></b>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="del"
+                        onclick="del(this.value)">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
