--- a/Task1/addCustomer.html
+++ b/Task1/addCustomer.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="content">
-        <form th:object="${customer}" method="post" action="lisCustomer.html">
+        <form >
             <fieldset>
                 <legend>New Customer</legend>
                 <center>
@@ -19,15 +19,14 @@
                             <td>
                                 <div class="mb-3 ">
                                     <label class="form-label">Name</label>
-                                    <input th:field="*{name}" type="text" class="form-control" placeholder="Enter your name">
-                                    <p style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
+                                    <input  type="text" class="form-control" placeholder="Enter your name">
                                 </div>
                             </td>
                             <td>
                                 <div class="mb-3">
                                     <label class="form-label">Customer Type</label>
-                                    <select class="form-select" th:field="*{customerType}">
-                                        <option th:each="type:${types}" th:text="${type.name}" th:value="${type.id}"></option>
+                                    <select class="form-select" >
+                                        <option >...</option>
                                     </select>
                                 </div>
                             </td>
@@ -36,14 +35,13 @@
                             <td>
                                 <div class="mb-3 ">
                                     <label class="form-label">Date Of Birth</label>
-                                    <input th:field="*{dateOfBirth}" type="date" class="form-control">
-                                    <p style="color: red" th:if="${#fields.hasErrors('dateOfBirth')}" th:errors="*{dateOfBirth}"></p>
+                                    <input  type="date" class="form-control">
                                 </div>
                             </td>
                             <td>
                                 <div class="mb-3 ">
                                     <label class="form-label">Gender</label>
-                                    <select class="form-select" th:field="*{gender}" >
+                                    <select class="form-select"  >
                                         <option value=1 >Nam</option>
                                         <option value=0 >Nữ</option>
                                     </select>
@@ -54,15 +52,13 @@
                             <td>
                                 <div class="mb-3 ">
                                     <label class="form-label">Id Card</label>
-                                    <input th:field="*{idCard}" type="text" class="form-control" placeholder="Enteryour id card">
-                                    <p style="color: red" th:if="${#fields.hasErrors('idCard')}" th:errors="*{idCard}"></p>
+                                    <input  type="text" class="form-control" placeholder="Enteryour id card">
                                 </div>
                             </td>
                             <td>
                                 <div class="mb-3 ">
                                     <label class="form-label">Phone Number</label>
-                                    <input th:field="*{phoneNumber}" type="text" class="form-control" placeholder="Enter your phone number">
-                                    <p style="color: red" th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}"></p>
+                                    <input  type="text" class="form-control" placeholder="Enter your phone number">
                                 </div>
                             </td>
                         </tr>
@@ -70,15 +66,13 @@
                             <td>
                                 <div class="mb-3 ">
                                     <label class="form-label">Email</label>
-                                    <input th:field="*{email}" type="text" class="form-control" placeholder="Enter your email">
-                                    <p style="color: red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
+                                    <input  type="text" class="form-control" placeholder="Enter your email">
                                 </div>
                             </td>
                             <td>
                                 <div class="mb-3 ">
                                     <label class="form-label">Address</label>
-                                    <input th:field="*{address}" type="text" class="form-control" placeholder="Enter your address">
-                                    <p style="color: red" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></p>
+                                    <input  type="text" class="form-control" placeholder="Enter your address">
                                 </div>
                             </td>
                         </tr>
