--- a/Task1/lisCustomer.html
+++ b/Task1/lisCustomer.html
@@ -15,7 +15,6 @@
             <input name="nameCustomer" type="text" placeholder="enter your name"/>
             <input type="submit" class="btn btn-primary" role="button" aria-disabled="true" value="Search"/>
         </form>
-        <b style="color: red;float: left;" th:if="${mess}" th:text="${mess}"></b>
         <a  class="btn btn-primary" role="button" aria-disabled="true"
            style="float: right;margin-right: 20px;margin-bottom: 10px">Add New</a>
         <table class="table table-striped">
@@ -31,50 +30,46 @@
                 <th>Address</th>
                 <th>Action</th>
             </tr>
-            <tr th:if="${customers.isEmpty()}">
-                <td colspan="10">Not found</td>
-            </tr>
-            <tr th:each="customer:${customers}">
-                <td th:text="${customer.id}"></td>
-                <td th:text="${customer.name}"></td>
-                <td th:text="${customer.customerType.name}"></td>
-                <td th:text="${customer.dateOfBirth}"></td>
+
+            <tr >
+                <td ></td>
+                <td ></td>
+                <td ></td>
+                <td ></td>
                 <td>
-                    <p th:if="${customer.gender==1}">Nam</p>
-                    <p th:if="${customer.gender==0}">Nữ</p>
+                    <p >Nam</p>
+                    <p >Nữ</p>
                 </td>
-                <td th:text="${customer.idCard}"></td>
-                <td th:text="${customer.phoneNumber}"></td>
-                <td th:text="${customer.email}"></td>
-                <td th:text="${customer.address}"></td>
+                <td ></td>
+                <td ></td>
+                <td ></td>
+                <td ></td>
                 <td>
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#DetailModal"
-                            id="detail" th:value="${customer.id}" onclick="detailCus(this.value)">Detail</button>
-                    <a th:href="@{customer/edit/{id}(id=${customer.id})}" class="btn btn-primary" role="button"
+                            id="detail"  onclick="detailCus(this.value)">Detail</button>
+                    <a  class="btn btn-primary" role="button"
                        aria-disabled="true">Edit</a>
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                            id="btn_del" th:value="${customer.id}" onclick="deleteCus(this.value)">Delete</button>
+                            id="btn_del"  onclick="deleteCus(this.value)">Delete</button>
                 </td>
             </tr>
         </table>
         <!--    phan trang-->
         <center>
-            <div th:if="${!customers.isEmpty()}" style="margin-top: 50px">
+            <div  style="margin-top: 50px">
                 <a class="btn btn-primary btn-sm" role="button" aria-disabled="true"
-                   th:href="@{/customer(page=${customers.number - 1},nameCustomer=${nameCustomer})}"
-                   th:if="${customers.hasPrevious()}">Previous</a>
-                <span th:href="${customers.isEmpty()}" th:each="pageNo:${#numbers.sequence(0,customers.totalPages-1)}">
-                    <a th:if="${!(customers.number==pageNo)}" class="btn btn-primary btn-sm" role="button"
+                   >Previous</a>
+                <span >
+                    <a  class="btn btn-primary btn-sm" role="button"
                        aria-disabled="true"
-                       th:href="@{/customer(page=${pageNo},nameCustomer=${nameCustomer})}" th:text="${pageNo}"/>
-                    <a th:if="${(customers.number==pageNo)}" class="btn btn-primary btn-sm" role="button"
+                       />
+                    <a  class="btn btn-primary btn-sm" role="button"
                        aria-disabled="true"
-                       th:href="@{/customer(page=${pageNo},nameCustomer=${nameCustomer})}" th:text="${pageNo}"
+
                        style="background-color: red"/>
                 </span>
                 <a class="btn btn-primary btn-sm" role="button" aria-disabled="true"
-                   th:href="@{/customer(page=${customers.number + 1},nameCustomer=${nameCustomer})}"
-                   th:if="${customers.hasNext()}">Next</a>
+                  >Next</a>
             </div>
         </center>
     </div>
