--- a/Task1/listContract.html
+++ b/Task1/listContract.html
@@ -15,7 +15,6 @@
             <input name="nameCustomer" type="text" placeholder="enter your name"/>
             <input type="submit" class="btn btn-primary" role="button" aria-disabled="true" value="Search"/>
         </form>
-        <b style="color: red;float: left;" th:if="${mess}" th:text="${mess}"></b>
         <a  class="btn btn-primary" role="button" aria-disabled="true"
            style="float: right;margin-right: 20px;margin-bottom: 10px">Add New</a>
         <table class="table table-striped">
@@ -26,39 +25,34 @@
                 <th>Deposit</th>
                 <th>Total payment amount</th>
             </tr>
-            <tr th:if="${customers.isEmpty()}">
-                <td colspan="10">Not found</td>
-            </tr>
-            <tr th:each="customer:${customers}">
-                <td th:text="${customer.id}"></td>
-                <td th:text="${customer.name}"></td>
-                <td th:text="${customer.customerType.name}"></td>
-                <td th:text="${customer.dateOfBirth}"></td>
-                <td th:text="${customer.address}"></td>
+            <tr >
+                <td ></td>
+                <td ></td>
+                <td ></td>
+                <td ></td>
+                <td ></td>
             </tr>
         </table>
         <!--    phan trang-->
         <center>
-            <div th:if="${!customers.isEmpty()}" style="margin-top: 50px">
+            <div  style="margin-top: 50px">
                 <a class="btn btn-primary btn-sm" role="button" aria-disabled="true"
-                   th:href="@{/customer(page=${customers.number - 1},nameCustomer=${nameCustomer})}"
-                   th:if="${customers.hasPrevious()}">Previous</a>
-                <span th:href="${customers.isEmpty()}" th:each="pageNo:${#numbers.sequence(0,customers.totalPages-1)}">
-                    <a th:if="${!(customers.number==pageNo)}" class="btn btn-primary btn-sm" role="button"
+                   >Previous</a>
+                <span >
+                    <a  class="btn btn-primary btn-sm" role="button"
                        aria-disabled="true"
-                       th:href="@{/customer(page=${pageNo},nameCustomer=${nameCustomer})}" th:text="${pageNo}"/>
-                    <a th:if="${(customers.number==pageNo)}" class="btn btn-primary btn-sm" role="button"
+                       />
+                    <a  class="btn btn-primary btn-sm" role="button"
                        aria-disabled="true"
-                       th:href="@{/customer(page=${pageNo},nameCustomer=${nameCustomer})}" th:text="${pageNo}"
+
                        style="background-color: red"/>
                 </span>
                 <a class="btn btn-primary btn-sm" role="button" aria-disabled="true"
-                   th:href="@{/customer(page=${customers.number + 1},nameCustomer=${nameCustomer})}"
-                   th:if="${customers.hasNext()}">Next</a>
+                   >Next</a>
             </div>
         </center>
     </div>
-    <div th:include="~{Home::footer}"></div>
+    <div ></div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
